Add spaghetti and meatballs recipe
Create hyperlink from index, add associated image, add recipe page

--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
 
 <body>
     <h1><p>Odin Recipes</p></h1>
-        <a href="recipes/mac-n-cheese.html">Mac N' Cheese</a>
+        <p><a href="recipes/mac-n-cheese.html">Mac N' Cheese</a></p>
 
-
+        <p><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
 
 
 
