Add boilerplate, edit format, add recipe
Added boilerplate to all recipe pages, and edited format for better
style. In addition to a new baked peppered chicken recipe

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <html lang="en">
 <Head>
 <meta charset="utf8">
@@ -9,15 +10,10 @@
 
         <p><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
 
-
+        <p><a href="recipes/baked-chicken.html">Baked chicken</a></p>
 
 
 </body>
-
-    
-
-
-
 
 </Head>
 </html>
