--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -1,10 +1,17 @@
+<!DOCTYPE html>
+
+<html lang="en">
+<head>
+<meta charset="utf8">
+
 <body>
 <p><h1>Best Mac N' Cheese</h1></p>
 <img src="../images-for-recipes/mac-n-cheese.jpg" alt="Picture of Mac N Cheese">
 <p><h1>The taste of childhood...</h1></p>
 <p>Mac N' Cheese has always been a staple while I grew up, which then became a comfort dish as I got older, and since I make it frequently, It's important to keep it simple. In the following recipe, we will combine common household Ingredients in the most delicious way known to mankind.</p>
 
-<p><h2>Ingredients:</h2></p>
+<p><h1>Ingredients:</h1></p>
+
 <ul>
 <li>Macaroni</li>
 <li>Sharp cheddar cheese</li>    
@@ -13,19 +20,16 @@
 <li>Chopped garlic</li>    
 </ul>
 
-<p><h2>Steps:</h2></p>
+<p><h1>Steps:</h1></p>
+
 <ol>
 <li>Cook 60g of dry Macaroni in boiled water for 7 minutes, then drain the water accordingly.</li>
 <li>Add a stick of butter to a heated pan, then add chopped garlic.</li>
 <li>Add 1 cup of milk and whisk gently before adding the cooked Macaroni.</li>
 <li>Add 50g of shredded cheddar and whisk until the desired creaminess is achieved.</li>
 <li>Add salt, pepper, and parsley(optional) to taste.</li>
-
-
 </ol>
 
-
-
-
-
 </body>
+</head>
+</html>
