Add css file and background style
Background color picked for all pages; played around with some of the
CSS declarations, such as typgraphy, and font style

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-
-<html lang="en">
 <Head>
 <meta charset="utf8">
+<html lang="en"></html>
+<link rel="stylesheet" href="style.css">
 
 <body>
-    <h1><p>Odin Recipes</p></h1>
-        <p><a href="recipes/mac-n-cheese.html">Mac N' Cheese</a></p>
+    <h1><p id="menu-title">Odin Recipes</p></h1>
+        <p class="recipe-click"><a href="recipes/mac-n-cheese.html">Mac N' Cheese</a></p>
 
-        <p><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
+        <p class="recipe-click"><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
 
-        <p><a href="recipes/baked-chicken.html">Baked chicken</a></p>
+        <p class="recipe-click"><a href="recipes/baked-chicken.html">Baked chicken</a></p>
 
 
 </body>
