--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 
-<html lang="en">
 <head>
 <meta charset="utf8">
+<html lang="en"></html>
+<link rel="stylesheet" href="../style.css">
+</head>
 
+<div class="everything">
 <body>
-<p><h1>Best Mac N' Cheese</h1></p>
+<p class="cat-titles">Mac N' Cheese</p>
 <img src="../images-for-recipes/mac-n-cheese.jpg" alt="Picture of Mac N Cheese">
 <p><h1>The taste of childhood...</h1></p>
 <p>Mac N' Cheese has always been a staple while I grew up, which then became a comfort dish as I got older, and since I make it frequently, It's important to keep it simple. In the following recipe, we will combine common household Ingredients in the most delicious way known to mankind.</p>
 
-<p><h1>Ingredients:</h1></p>
+<p><h1 class="test">Ingredients:</h1></p>
 
 <ul>
 <li>Macaroni</li>
@@ -31,5 +34,4 @@
 </ol>
 
 </body>
-</head>
-</html>
+</div>
