--- a/recipes/spaghetti-meatball.html
+++ b/recipes/spaghetti-meatball.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-
-<html lang="en">
 <head>
 <meta charset="utf8">
+<html lang="en">
+<link rel="stylesheet" href="../style.css">
+</head>
 
 <body>
     <p><h1>Spaghetti and Meatball</h1></p>
@@ -37,5 +38,3 @@
     </ol>
     
 </body>
-</head>
-</html>
