--- a/recipes/baked-chicken.html
+++ b/recipes/baked-chicken.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 
-<html lang="en">
 <head>
 <meta charset="utf8">
-
+<html lang="en"></html>
+<link rel="stylesheet" href="../style.css">
+</head>
 
 <body>
     <p><h1>Baked peppered chicken</h1></p>
@@ -34,5 +35,3 @@
     <p>Pairing tip: Serve with mashed potatoes, string beans, or any variety of white rice.</p>
     
 </body>
-</head>
-</html>
