Rearrange and rename syntax
Cleaned up bad syntax, formatting CSS style, and established recipe page
layout/design; more to come

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
 <html lang="en"></html>
 <link rel="stylesheet" href="style.css">
 
+<div class="text">
 <body>
-    <h1><p id="menu-title">Odin Recipes</p></h1>
-        <p class="recipe-click"><a href="recipes/mac-n-cheese.html">Mac N' Cheese</a></p>
+    <h1><p>Odin Recipes</p></h1>
+        <p class="link"><a href="recipes/mac-n-cheese.html">Mac N' Cheese</a></p>
 
-        <p class="recipe-click"><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
+        <p class="link"><a href="recipes/spaghetti-meatball.html">Spaghetti and Meatball</a></p>        
 
-        <p class="recipe-click"><a href="recipes/baked-chicken.html">Baked chicken</a></p>
+        <p class="link"><a href="recipes/baked-chicken.html">Baked chicken</a></p>
 
 
 </body>
-
+</div>
 </Head>
-</html>
