--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -6,14 +6,17 @@
 <link rel="stylesheet" href="../style.css">
 </head>
 
-<div class="everything">
+
+
+<div class="pagetext">
+
 <body>
-<p class="cat-titles">Mac N' Cheese</p>
+<p><h1 class="titles">Mac N' Cheese</h1></p>
 <img src="../images-for-recipes/mac-n-cheese.jpg" alt="Picture of Mac N Cheese">
-<p><h1>The taste of childhood...</h1></p>
+<p><h1 class="subsection">The taste of childhood...</h1></p>
 <p>Mac N' Cheese has always been a staple while I grew up, which then became a comfort dish as I got older, and since I make it frequently, It's important to keep it simple. In the following recipe, we will combine common household Ingredients in the most delicious way known to mankind.</p>
 
-<p><h1 class="test">Ingredients:</h1></p>
+<p><h1 class="subsection">Ingredients:</h1></p>
 
 <ul>
 <li>Macaroni</li>
@@ -23,7 +26,7 @@
 <li>Chopped garlic</li>    
 </ul>
 
-<p><h1>Steps:</h1></p>
+<p><h1 class="subsection">Steps:</h1></p>
 
 <ol>
 <li>Cook 60g of dry Macaroni in boiled water for 7 minutes, then drain the water accordingly.</li>
